make shift+enter work if shortcut for smart return is removed

BUG: 241994